Issue #ED-4333 SCSS support -- All Players alignments and UI issues

--- a/themes/portal/_dark.scss
+++ b/themes/portal/_dark.scss
@@ -315,7 +315,7 @@ html[data-mode='darkmode'] {
     --sb-mygroups-bg: var(--color-444);
     --groups-content-header: var(--color-444);
     --kabab-menu-hover-bg: var(--black);
-    --kabab-menu-dropdown-bg: var(--color-333);
+    --kabab-menu-dropdown-bg: var(--color-444);
     --kabab-menu-dropdown-item-active: var(--color-333);
 
     --sbfaq-compt-bg: var(--color-222);
